Add production config for Railway deployment