@@ -13,21 +13,20 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * Implémentation du service pour gérer les catégories.
+ * Implémentation du service pour la gestion des catégories dans MacSpace.
  */
 @Service
 @Slf4j
 public class CategoryServiceImpl implements CategoryService {
 
-    private CategoryRepository categoryRepository;
+    private final CategoryRepository categoryRepository;
 
     /**
-     * Constructeur avec injection de dépendance pour le repository de catégorie.
+     * Constructeur avec injection de dépendance.
      *
-     * @param categoryRepository le repository de catégorie
+     * @param categoryRepository Le repository des catégories.
      */
     @Autowired
     public CategoryServiceImpl(CategoryRepository categoryRepository) {
@@ -35,19 +34,18 @@ public class CategoryServiceImpl implements CategoryService {
     }
 
     /**
-     * Sauvegarde ou met à jour une catégorie.
-     *
-     * @param dto l'objet DTO de la catégorie à sauvegarder
-     * @return l'objet DTO de la catégorie sauvegardée
-     * @throws InvalidEntityException si la catégorie n'est pas valide
+     * {@inheritDoc}
      */
     @Override
     public CategoryDto save(CategoryDto dto) {
-        // Validation de la catégorie
         List<String> errors = CategoryValidator.validate(dto);
         if (!errors.isEmpty()) {
             log.error("La catégorie n'est pas valide {}", dto);
-            throw new InvalidEntityException("La catégorie n'est pas valide", ErrorCodes.CATEGORY_NOT_VALID, errors);
+            throw new InvalidEntityException(
+                    "La catégorie n'est pas valide",
+                    ErrorCodes.CATEGORY_NOT_VALID,
+                    errors
+            );
         }
         return CategoryDto.fromEntity(
                 categoryRepository.save(
@@ -57,11 +55,7 @@ public class CategoryServiceImpl implements CategoryService {
     }
 
     /**
-     * Recherche une catégorie par son ID.
-     *
-     * @param id l'ID de la catégorie
-     * @return l'objet DTO de la catégorie trouvée
-     * @throws EntityNotFoundException si aucune catégorie n'est trouvée avec cet ID
+     * {@inheritDoc}
      */
     @Override
     public CategoryDto findById(Integer id) {
@@ -72,17 +66,13 @@ public class CategoryServiceImpl implements CategoryService {
         return categoryRepository.findById(id)
                 .map(CategoryDto::fromEntity)
                 .orElseThrow(() -> new EntityNotFoundException(
-                        "Aucune catégorie avec l'ID = " + id + " n'a été trouvée dans la base de données",
-                        ErrorCodes.CATEGORY_NOT_FOUND)
-                );
+                        "Aucune catégorie avec l'ID = " + id + " n'a été trouvée",
+                        ErrorCodes.CATEGORY_NOT_FOUND
+                ));
     }
 
     /**
-     * Recherche une catégorie par son code.
-     *
-     * @param code le code de la catégorie
-     * @return l'objet DTO de la catégorie trouvée
-     * @throws EntityNotFoundException si aucune catégorie n'est trouvée avec ce code
+     * {@inheritDoc}
      */
     @Override
     public CategoryDto findByCode(String code) {
@@ -93,33 +83,46 @@ public class CategoryServiceImpl implements CategoryService {
         return categoryRepository.findCategoryByCode(code)
                 .map(CategoryDto::fromEntity)
                 .orElseThrow(() -> new EntityNotFoundException(
-                        "Aucune catégorie avec le CODE = " + code + " n'a été trouvée dans la base de données",
-                        ErrorCodes.CATEGORY_NOT_FOUND)
-                );
+                        "Aucune catégorie avec le CODE = " + code + " n'a été trouvée",
+                        ErrorCodes.CATEGORY_NOT_FOUND
+                ));
     }
 
     /**
-     * Récupère toutes les catégories.
-     *
-     * @return la liste des objets DTO de toutes les catégories
+     * {@inheritDoc}
      */
     @Override
     public List<CategoryDto> findAll() {
         return categoryRepository.findAll().stream()
                 .map(CategoryDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
-     * Supprime une catégorie par son ID.
-     *
-     * @param id l'ID de la catégorie à supprimer
+     * {@inheritDoc}
+     */
+    @Override
+    public List<CategoryDto> findAllByIdEntreprise(Integer idEntreprise) {
+        return categoryRepository.findAllByIdEntreprise(idEntreprise)
+                .stream()
+                .map(CategoryDto::fromEntity)
+                .toList();
+    }
+
+    /**
+     * {@inheritDoc}
      */
     @Override
     public void delete(Integer id) {
         if (id == null) {
             log.error("L'ID de la catégorie est nul");
             return;
+        }
+        if (!categoryRepository.existsById(id)) {
+            throw new EntityNotFoundException(
+                    "Aucune catégorie avec l'ID = " + id + " n'a été trouvée",
+                    ErrorCodes.CATEGORY_NOT_FOUND
+            );
         }
         categoryRepository.deleteById(id);
     }
